@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>red</artifactId>
 		<groupId>blue.red</groupId>
-		<version>1.0.0</version>
+		<version>2.0.0</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>red-client</artifactId>
@@ -54,6 +54,11 @@
 						<version>${junit.platform.version}</version>
 					</dependency>
 				</dependencies>
+				<configuration>
+					<argLine>
+						--illegal-access=warn
+					</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
