@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>red</artifactId>
 		<groupId>blue.red</groupId>
-		<version>1.0.0</version>
+		<version>2.0.0</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>red-test</artifactId>
@@ -71,6 +71,11 @@
 					<excludes>
 						<exclude>**/CucumberTest.java</exclude>
 					</excludes>
+					<argLine>
+						--illegal-access=warn
+						--add-exports red.test/blue.test.red.test.cucumber=ALL-UNNAMED
+						--add-opens red.test/features=ALL-UNNAMED
+					</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
